Fix spacing

--- a/src/style-menu.css
+++ b/src/style-menu.css
@@ -279,7 +279,7 @@ span.sale-new {
 }
 
 #o {
-    padding-left: 42px;
+    padding-left: 35px;
 }
 
 #phone-icon,
